# remember-me

./: .env.example  CLAUDE.md  README-CN.md  README.md  pyproject.toml
docs/: design.md
skills/using-rememberme-cli/: SKILL.md
src/rememberme/: __init__.py  __main__.py  config.py  embeddings.py  memory_store.py  models.py
src/rememberme/cli/: __init__.py  commands.py  formatter.py  lazy.py
src/rememberme/core/: __init__.py  exceptions.py  memory_manager.py
src/rememberme/mcp/: __init__.py  adapter.py
tests/: test_config.py  test_embeddings.py  test_models.py
