[project]
name = "rememberme-mcp"
version = "0.2.0"
description = "CLI + MCP Server for long-term memory management with Qdrant"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.6.0",
    "qdrant-client>=1.13.0",
    "httpx",
    "pydantic>=2.0",
    "python-dotenv",
    "click>=8.0",
]

[project.scripts]
rememberme = "rememberme.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rememberme"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
